# Toms-Work-

./: Bishop.cpp  Bishop.h  CMakeLists.txt  King.cpp  King.h  Knight.cpp  Knight.h  Move.h  MoveScore.h  OpeningBook.cpp  OpeningBook.h  Pawn.cpp  Pawn.h  Piece.h  PrecomputeMovesGlobal.cpp  PrecomputeMovesGlobal.h  Queen.cpp  Queen.h  README.md  Rook.cpp  Rook.h  chessBoard.cpp  chessBoard.h  main.cpp  opening_book.txt  precomputeMoves.cpp  precomputeMoves.h
